refact: listopts
